--- a/.travis.yml
+++ b/.travis.yml
@@ -87,69 +87,69 @@ default_test_config: &default_test_config
 matrix:
   include:
 
-    # Build macOS engine
-    - name: "OSX Native Engine Binary Builder"
-      os: osx
-      # We request the oldest image we can (corresponding to OSX 10.11) for maximum compatibility.
-      # We use 10.11 as a minimum to avoid https://github.com/rust-lang/regex/issues/489.
-      # See: https://docs.travis-ci.com/user/reference/osx/#OS-X-Version
-      osx_image: xcode8
-      stage: Test Pants
-      language: generic
-      env:
-        - PREPARE_DEPLOY=1
-      script:
-        - ./pants --version && ./build-support/bin/release.sh -n
-
-    # Build Linux engine
-    - name: "Linux Native Engine Binary Builder"
-      os: linux
-      stage: Test Pants
-      language: generic
-      services:
-        - docker
-      env:
-        - PREPARE_DEPLOY=1
-      before_script:
-        - ulimit -c unlimited
-      script:
-        - docker build --rm -t travis_ci
-          --build-arg "TRAVIS_USER=$(id -un)"
-          --build-arg "TRAVIS_UID=$(id -u)"
-          --build-arg "TRAVIS_GROUP=$(id -gn)"
-          --build-arg "TRAVIS_GID=$(id -g)"
-            build-support/docker/travis_ci/
-        # Mount ${HOME} to cache the ${HOME}/.cache/pants/rust-toolchain
-        - docker run --rm -t
-          -v "${HOME}:/travis/home"
-          -v "${TRAVIS_BUILD_DIR}:/travis/workdir"
-          travis_ci:latest
-          sh -c "git clean -xfd && ./pants --version && ./build-support/bin/release.sh -n"
-      after_failure:
-        - build-support/bin/ci-failure.sh
-
-    # Deploy Pex
-    - name: "Deploy Pants PEX"
-      os: linux
-      language: python
-      stage: Deploy Pants Pex
-      env:
-        - PANTS_PEX_RELEASE=stable
-      script:
-        - ./build-support/bin/release.sh -p
-      deploy:
-        # See https://docs.travis-ci.com/user/deployment/releases/
-        provider: releases
-        # The pantsbuild-ci-bot OAuth token, see the pantsbuild vault for details.
-        api_key:
-          secure: "u0aCsiuVGOg28YxG0sQUovuUm29kKwQfFgHbNz2TT5L+cGoHxGl4aoVOCtuwWYEtbNGmYc8/3WRS3C/jOiqQj6JEgHUzWOsnfKUObEqNhisAmXbzBbKc0wPQTL8WNK+DKFh32sD3yPYcw+a5PTLO56+o7rqlI25LK7A17WesHC4="
-        file_glob: true
-        file: dist/deploy/pex/*
-        skip_cleanup: true
-        on:
-          # We only release a pex for Pants releases, which are tagged.
-          tags: true
-          repo: pantsbuild/pants
+#    # Build macOS engine
+#    - name: "OSX Native Engine Binary Builder"
+#      os: osx
+#      # We request the oldest image we can (corresponding to OSX 10.11) for maximum compatibility.
+#      # We use 10.11 as a minimum to avoid https://github.com/rust-lang/regex/issues/489.
+#      # See: https://docs.travis-ci.com/user/reference/osx/#OS-X-Version
+#      osx_image: xcode8
+#      stage: Test Pants
+#      language: generic
+#      env:
+#        - PREPARE_DEPLOY=1
+#      script:
+#        - ./pants --version && ./build-support/bin/release.sh -n
+#
+#    # Build Linux engine
+#    - name: "Linux Native Engine Binary Builder"
+#      os: linux
+#      stage: Test Pants
+#      language: generic
+#      services:
+#        - docker
+#      env:
+#        - PREPARE_DEPLOY=1
+#      before_script:
+#        - ulimit -c unlimited
+#      script:
+#        - docker build --rm -t travis_ci
+#          --build-arg "TRAVIS_USER=$(id -un)"
+#          --build-arg "TRAVIS_UID=$(id -u)"
+#          --build-arg "TRAVIS_GROUP=$(id -gn)"
+#          --build-arg "TRAVIS_GID=$(id -g)"
+#            build-support/docker/travis_ci/
+#        # Mount ${HOME} to cache the ${HOME}/.cache/pants/rust-toolchain
+#        - docker run --rm -t
+#          -v "${HOME}:/travis/home"
+#          -v "${TRAVIS_BUILD_DIR}:/travis/workdir"
+#          travis_ci:latest
+#          sh -c "git clean -xfd && ./pants --version && ./build-support/bin/release.sh -n"
+#      after_failure:
+#        - build-support/bin/ci-failure.sh
+#
+#    # Deploy Pex
+#    - name: "Deploy Pants PEX"
+#      os: linux
+#      language: python
+#      stage: Deploy Pants Pex
+#      env:
+#        - PANTS_PEX_RELEASE=stable
+#      script:
+#        - ./build-support/bin/release.sh -p
+#      deploy:
+#        # See https://docs.travis-ci.com/user/deployment/releases/
+#        provider: releases
+#        # The pantsbuild-ci-bot OAuth token, see the pantsbuild vault for details.
+#        api_key:
+#          secure: "u0aCsiuVGOg28YxG0sQUovuUm29kKwQfFgHbNz2TT5L+cGoHxGl4aoVOCtuwWYEtbNGmYc8/3WRS3C/jOiqQj6JEgHUzWOsnfKUObEqNhisAmXbzBbKc0wPQTL8WNK+DKFh32sD3yPYcw+a5PTLO56+o7rqlI25LK7A17WesHC4="
+#        file_glob: true
+#        file: dist/deploy/pex/*
+#        skip_cleanup: true
+#        on:
+#          # We only release a pex for Pants releases, which are tagged.
+#          tags: true
+#          repo: pantsbuild/pants
 
     - <<: *default_test_config
       name: "Self checks, lint, and JVM tests"
@@ -158,123 +158,125 @@ matrix:
         - sudo modprobe fuse
         - sudo chmod 666 /dev/fuse
         - sudo chown root:$USER /etc/fuse.conf
+      env:
+        - MODE=debug
       script:
         - ./build-support/bin/travis-ci.sh -fkmrjt
 
-    - <<: *default_test_config
-      name: "Py2 - Unit tests for pants and pants-plugins"
-      script:
-        - ./build-support/bin/travis-ci.sh -lp
-
-    - <<: *default_test_config
-      name: "Py3 - Unit tests for pants and pants-plugins"
-      script:
-        - ./build-support/bin/travis-ci.sh -3lp
-
-    - <<: *default_test_config
-      name: "Py2 - Python contrib tests"
-      script:
-        - ./build-support/bin/travis-ci.sh -n
-
-    - <<: *default_test_config
-      name: "Py3 - Python contrib tests"
-      script:
-        - ./build-support/bin/travis-ci.sh -3n
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 1"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 0/7
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 2"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 1/7
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 3"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 2/7
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 4"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 3/7
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 5"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 4/7
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 6"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 5/7
-
-    - <<: *default_test_config
-      name: "Python integration tests for pants - shard 7"
-      script:
-        - ./build-support/bin/travis-ci.sh -c -i 6/7
-
-    # Rust on linux
-    - name: "Rust Tests Linux"
-      os: linux
-      dist: trusty
-      sudo: required
-      stage: Test Pants
-      language: python
-      python: *python_version
-      before_install:
-        - sudo apt-get install -y pkg-config fuse libfuse-dev
-        - sudo modprobe fuse
-        - sudo chmod 666 /dev/fuse
-        - sudo chown root:$USER /etc/fuse.conf
-      before_script:
-        - ulimit -c unlimited
-        - ulimit -n 8192
-      script:
-        - ./build-support/bin/travis-ci.sh -be
-    # Rust on macOS
-    - name: "Rust + Platform-specific Tests OSX"
-      os: osx
-      # Fuse actually works on this image. It hangs on many others.
-      osx_image: xcode8.3
-      stage: Test Pants
-      language: generic
-      env:
-        # Specifically avoid the OSX provided 2.7.10 under xcode8.3 since it returns a platform
-        # of `macosx-*-intel` where the `intel` suffix is bogus but pex has not yet been taught to
-        # deal with this. Can be removed when this issue is resolved:
-        # https://github.com/pantsbuild/pex/issues/523
-        - PANTS_PYTHON_SETUP_INTERPRETER_CONSTRAINTS="['CPython>2.7.10,<3']"
-      before_install:
-        - brew tap caskroom/cask && brew update && brew cask install osxfuse
-      before_script:
-        - ulimit -c unlimited
-        - ulimit -n 8192
-      script:
-        # Platform-specific tests currently need a pants pex, so we bootstrap here (no -b) and
-        # set -z to run the platform-specific tests.
-        - ./build-support/bin/travis-ci.sh -ez
-
-    # Rust Clippy on Linux with nightly Rust
-    - name: &clippy_shard "[ALLOWED TO BE RED] Rust Clippy on Linux with nightly Rust"
-      os: linux
-      dist: trusty
-      sudo: required
-      stage: Test Pants
-      language: python
-      python: *python_version
-      before_install:
-        - sudo apt-get install -y pkg-config fuse libfuse-dev
-        - sudo modprobe fuse
-        - sudo chmod 666 /dev/fuse
-        - sudo chown root:$USER /etc/fuse.conf
-      before_script:
-        - ulimit -c unlimited
-        - ulimit -n 8192
-      script:
-        - ./build-support/bin/travis-ci.sh -bs
+#    - <<: *default_test_config
+#      name: "Py2 - Unit tests for pants and pants-plugins"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -lp
+#
+#    - <<: *default_test_config
+#      name: "Py3 - Unit tests for pants and pants-plugins"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -3lp
+#
+#    - <<: *default_test_config
+#      name: "Py2 - Python contrib tests"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -n
+#
+#    - <<: *default_test_config
+#      name: "Py3 - Python contrib tests"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -3n
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 1"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 0/7
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 2"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 1/7
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 3"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 2/7
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 4"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 3/7
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 5"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 4/7
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 6"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 5/7
+#
+#    - <<: *default_test_config
+#      name: "Python integration tests for pants - shard 7"
+#      script:
+#        - ./build-support/bin/travis-ci.sh -c -i 6/7
+#
+#    # Rust on linux
+#    - name: "Rust Tests Linux"
+#      os: linux
+#      dist: trusty
+#      sudo: required
+#      stage: Test Pants
+#      language: python
+#      python: *python_version
+#      before_install:
+#        - sudo apt-get install -y pkg-config fuse libfuse-dev
+#        - sudo modprobe fuse
+#        - sudo chmod 666 /dev/fuse
+#        - sudo chown root:$USER /etc/fuse.conf
+#      before_script:
+#        - ulimit -c unlimited
+#        - ulimit -n 8192
+#      script:
+#        - ./build-support/bin/travis-ci.sh -be
+#    # Rust on macOS
+#    - name: "Rust + Platform-specific Tests OSX"
+#      os: osx
+#      # Fuse actually works on this image. It hangs on many others.
+#      osx_image: xcode8.3
+#      stage: Test Pants
+#      language: generic
+#      env:
+#        # Specifically avoid the OSX provided 2.7.10 under xcode8.3 since it returns a platform
+#        # of `macosx-*-intel` where the `intel` suffix is bogus but pex has not yet been taught to
+#        # deal with this. Can be removed when this issue is resolved:
+#        # https://github.com/pantsbuild/pex/issues/523
+#        - PANTS_PYTHON_SETUP_INTERPRETER_CONSTRAINTS="['CPython>2.7.10,<3']"
+#      before_install:
+#        - brew tap caskroom/cask && brew update && brew cask install osxfuse
+#      before_script:
+#        - ulimit -c unlimited
+#        - ulimit -n 8192
+#      script:
+#        # Platform-specific tests currently need a pants pex, so we bootstrap here (no -b) and
+#        # set -z to run the platform-specific tests.
+#        - ./build-support/bin/travis-ci.sh -ez
+#
+#    # Rust Clippy on Linux with nightly Rust
+#    - name: &clippy_shard "[ALLOWED TO BE RED] Rust Clippy on Linux with nightly Rust"
+#      os: linux
+#      dist: trusty
+#      sudo: required
+#      stage: Test Pants
+#      language: python
+#      python: *python_version
+#      before_install:
+#        - sudo apt-get install -y pkg-config fuse libfuse-dev
+#        - sudo modprobe fuse
+#        - sudo chmod 666 /dev/fuse
+#        - sudo chown root:$USER /etc/fuse.conf
+#      before_script:
+#        - ulimit -c unlimited
+#        - ulimit -n 8192
+#      script:
+#        - ./build-support/bin/travis-ci.sh -bs
 
   allow_failures:
     - name: *clippy_shard
