--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ stages:
   - name: &build_stable Deploy Pants Pex
     if: tag IS present AND tag =~ ^release_.*$
   - name: &build_unstable Deploy Pants Pex Unstable
-    if: tag IS NOT present AND head_repo == 'wisechengyi/pants'
+    if: tag IS NOT present AND repo = 'wisechengyi/pants'
 
 default_test_config: &default_test_config
   os: linux
