--- a/3rdparty/python/BUILD
+++ b/3rdparty/python/BUILD
@@ -17,6 +17,13 @@ python_requirement_library(
   ]
 )
 
+python_requirement_library(
+  name='antlr4',
+  requirements=[
+    python_requirement('antlr4-python3-runtime==4.8')
+  ]
+)
+
 # Only used by a maintenance tool, so we lift this library out of the requirements.txt
 # file used to bootstrap pants itself.
 python_requirement_library(
