--- a/pants.toml
+++ b/pants.toml
@@ -175,6 +175,9 @@ allow_dups = true
 [gen.antlr-py]
 antlr3_deps = ["3rdparty/python:antlr-3.1.3"]
 
+[gen.antlr4-py]
+antlr4_deps = ["3rdparty/python:antlr4"]
+
 [gen.go-protobuf]
 import_target = "contrib/go/examples/src/protobuf/org/pantsbuild/example:protobuf-deps"
 
